done most of implementation.